--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neo4j/graphql": "^3.1.0",
+    "apollo-server-micro": "^3.6.7",
+    "graphql": "^16.4.0",
+    "micro": "^9.3.4",
+    "neo4j-driver": "^4.4.5",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@types/node": "^10.17.60",
+    "@types/react": "^18.0.8",
     "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5"
+    "eslint-config-next": "12.1.5",
+    "typescript": "^4.6.4"
   }
 }
